--- a/weatherApp/style.css
+++ b/weatherApp/style.css
@@ -23,3 +23,13 @@ body {
 .buscar:focus {
     border: 3px solid #555;
 }
+
+a {
+    display: block;
+    margin: 10px 0;
+    padding: 10px;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #007BFF;
+    border-radius: 5px;
+}
